TwinFeatsSoftware/css/standard.css
body {
	margin: 0
}

nav {
	background-color: black;
    display: flex;
    justify-content: space-around;
	font-size:larger;
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
}

a {
	color: #f0f0f0;
	text-decoration: none;
}

#home {
    background-image: url("../images/background.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
    width: 100%;
    height: 100vh;
	text-align: center;
	box-sizing: border-box;
    padding-top: 4rem;
}

.logo {
    width: 9ch;
}

.title, .logo {
    font-family: "Indie Flower";
    font-size: 3em;
}

.tagline {
    font-style: italic;
    font-size: 1.5em;
}

